level 2-2~5 캡슐화